[gd_scene load_steps=12 format=2]

[ext_resource path="res://res/fonts/Space_Grotesk/static/SpaceGrotesk-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://res/icons/share.png" type="Texture" id=2]
[ext_resource path="res://res/icons/edit.png" type="Texture" id=3]
[ext_resource path="res://res/fonts/Space_Grotesk/static/SpaceGrotesk-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://res/fonts/Space_Grotesk/static/SpaceGrotesk-SemiBold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://res/icons/question.png" type="Texture" id=6]
[ext_resource path="res://Scripts/KeyLoginScreen.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0, 0.6, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 43
outline_color = Color( 0, 0.6, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="Help" type="Sprite" parent="."]
position = Vector2( 496, 24 )
scale = Vector2( 0.0664062, 0.0664062 )
texture = ExtResource( 6 )

[node name="Button" type="Button" parent="Help"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -256.0
margin_top = -256.0
margin_right = 241.0
margin_bottom = 241.0

[node name="Title" type="Label" parent="."]
modulate = Color( 0, 0.6, 0, 1 )
margin_left = 56.0
margin_top = 32.0
margin_right = 542.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 1 )
text = "Load/Create Key"

[node name="LoadKeyButton" type="Sprite" parent="."]
position = Vector2( 128, 208 )
scale = Vector2( 0.328125, 0.328125 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="LoadKeyButton"]
modulate = Color( 0, 0.6, 0, 1 )
margin_left = -97.5238
margin_top = 73.1429
margin_right = 93.4762
margin_bottom = 129.143
custom_fonts/font = SubResource( 2 )
text = "Load Key"
align = 1

[node name="LoadKeyButton" type="Button" parent="LoadKeyButton"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -219.0
margin_top = -219.0
margin_right = 219.0
margin_bottom = 213.0

[node name="CreateKeyButton" type="Sprite" parent="."]
position = Vector2( 384, 200 )
scale = Vector2( 0.289063, 0.304687 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CreateKey" type="Button" parent="CreateKeyButton"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="CreateKeyButton"]
modulate = Color( 0, 0.6, 0, 1 )
margin_left = -138.378
margin_top = 131.282
margin_right = 100.622
margin_bottom = 190.282
custom_fonts/font = SubResource( 3 )
text = "Create Key"
align = 1

[node name="Thanks" type="Label" parent="."]
modulate = Color( 0, 0.6, 0, 1 )
margin_top = 288.0
margin_right = 397.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 4 )
text = "Special thanks to Kiranshatry, IconKahan and Muhammad Ali for the icons"

[node name="OpenKeyFileDialog" type="FileDialog" parent="."]
modulate = Color( 0, 1, 0, 1 )
margin_left = 42.0
margin_top = 40.0
margin_right = 469.0
margin_bottom = 284.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a key file."
dialog_text = "Hi"
mode_overrides_title = false
mode = 0
access = 2
current_dir = "/home/muhdsalm/Downloads/Caeser--main/Godot rewrite"
current_path = "/home/muhdsalm/Downloads/Caeser--main/Godot rewrite/"

[node name="CreateKeyFileDialog" type="FileDialog" parent="."]
modulate = Color( 0, 1, 0, 1 )
margin_left = 16.0
margin_top = 36.0
margin_right = 496.0
margin_bottom = 284.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Choose the key's location"
mode_overrides_title = false
access = 2
current_dir = "/home/muhdsalm/Downloads/Caeser--main/Godot rewrite"
current_path = "/home/muhdsalm/Downloads/Caeser--main/Godot rewrite/"

[connection signal="button_down" from="Help/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="LoadKeyButton/LoadKeyButton" to="." method="_on_LoadKeyButton_button_down"]
[connection signal="button_down" from="CreateKeyButton/CreateKey" to="." method="_on_CreateKey_button_down"]
[connection signal="file_selected" from="OpenKeyFileDialog" to="." method="_on_OpenKeyFileDialog_file_selected"]
[connection signal="file_selected" from="CreateKeyFileDialog" to="." method="_on_CreateKeyFileDialog_file_selected"]
